force-app/main/default/objects/Category_Hierarchy__c/Category_Hierarchy__c.object-meta.xml
<CustomObject>
    <description>This field is used to store the hierarchy of the product category.</description>
    <label>Category Hierarchy</label>
    <nameField>
        <label>Category Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>