force-app/main/default/objects/Category_Hierarchy__c/fields/Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Category_Code__c</fullName>
    <description>This field is used to store the category code of the product.</description>
    <externalId>true</externalId>
    <label>Category Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>