force-app/main/default/objects/Category_Hierarchy__c/fields/Category_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Category_Hierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This fields lookup the same object&apos;s parent record.</description>
    <label>Category Hierarchy</label>
    <referenceTo>Category_Hierarchy__c</referenceTo>
    <relationshipLabel>Category Hierarchy</relationshipLabel>
    <relationshipName>CategoryHierarchies</relationshipName>
    <type>Lookup</type>
</CustomField>