force-app/main/default/objects/Category_Hierarchy__c/fields/Category_Level__c.field-meta.xml
<CustomField>
    <fullName>Category_Level__c</fullName>
    <description>This field is used to store the category level of the product.</description>
    <label>Category Level</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>