force-app/main/default/objects/Category_Hierarchy__c/fields/CategoryHierarchyCodes__c.field-meta.xml
<CustomField>
    <fullName>CategoryHierarchyCodes__c</fullName>
    <formula>CASE( Category_Level__c,

4, if(Category_Hierarchy__r.Category_Hierarchy__r.Category_Code__c != null &amp;&amp; Category_Hierarchy__r.Category_Code__c != null, Category_Code__c +&apos;/&apos;+Category_Hierarchy__r.Category_Code__c+&apos;/&apos;+Category_Hierarchy__r.Category_Hierarchy__r.Category_Code__c, Category_Hierarchy__r.Category_Code__c),

&quot; &quot;)+CASE( Category_Level__c,

3, if(Category_Hierarchy__r.Category_Code__c != null, Category_Code__c +&apos;/&apos;+Category_Hierarchy__r.Category_Code__c, Category_Hierarchy__r.Category_Code__c),

&quot; &quot;)+CASE(Category_Level__c,

2, if(Category_Code__c != null, Category_Code__c, Category_Code__c), 

&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CategoryHierarchyCodes</label>
    <type>Text</type>
</CustomField>