force-app/main/default/objects/Category_Hierarchy__c/fields/Display_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Display_Sequence__c</fullName>
    <description>This field is used to store the display sequence of the product category.</description>
    <label>Display Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>