force-app/main/default/objects/Category_Hierarchy__c/fields/Upper_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Upper_Category_Code__c</fullName>
    <description>This field is used the parent category of the specific category code.</description>
    <label>Upper Category Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>