force-app/main/default/objects/Category_Hierarchy__c/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>NAME</columns>
    <columns>Category_Code__c</columns>
    <columns>Category_Hierarchy__c</columns>
    <columns>CategoryHierarchyCodes__c</columns>
    <columns>Category_Level__c</columns>
    <columns>Display_Sequence__c</columns>
    <columns>Upper_Category_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>MyView</label>
</ListView>